# clinicos-mcp-server

./: .dockerignore  .env.example  .firebaserc  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  START_HERE.md  firebase.json  pyproject.toml  smithery.yaml  start.sh
.claude-harness/: coding_agent_workflow.md  session_end_checklist.md
.firebase/: hosting.cHVibGlj.cache
docs/DEV_MEMORY/: claude_dev_log.md  deployment-plan.md  feature_checklist.json
docs/superpowers/plans/: 2026-04-01-clinicos-mcp-server.md
docs/superpowers/specs/: 2026-04-01-clinicos-mcp-server-design.md
scripts/: create-readonly-role-accred.sql  create-readonly-role-mbs.sql  create-readonly-role.sql  deploy.sh  init_dev.sh  seed-mbs-items.sql  seed-production-data.sql  seed-racgp-data.sql  stop_dev.sh
src/: config.py  server.py
src/clients/: rag_spine.py
src/db/: connection.py
src/db/queries/: mbs.py  psr.py  racgp.py
tests/: test_config.py  test_db_connection.py  test_mbs.py  test_psr.py  test_racgp.py  test_rag.py  test_server_smoke.py
