[project]
name = "clinicos-mcp"
version = "0.1.0"
description = "Australian Medicare & Clinical Intelligence MCP Server"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Dr. Alex - CVLM / ClinicOS" }]

dependencies = [
    "mcp[cli]>=1.0.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cloud-sql-python-connector[asyncpg]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
